[tool.poetry]
name = "hdf"
version = "2023.12.1"
description = ""
authors = ["Horia Filimonescu <horia.filimonescu+github@gmail.com>"]
readme = "README.md"
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
